--- a/setup_satellite_via_varsfiles.yml
+++ b/setup_satellite_via_varsfiles.yml
@@ -3,7 +3,7 @@
   connection: local
   gather_facts: false
   vars:
-    satellite_validate_certs: false
+    satellite_validate_certs: true
     async_timeout: 3600
     async_delay: 15
 
