--- a/config_as_code/satellite/leapp_8_to_9/content_views.yml
+++ b/config_as_code/satellite/leapp_8_to_9/content_views.yml
@@ -7,9 +7,9 @@ satellite_content_views:
     lifecycle_environments:
       - "RHEL8IPU_Dev"
     repositories:
-      - name: Red Hat Enterprise Linux 8 for x86_64 - BaseOS RPMs
+      - name: Red Hat Enterprise Linux 8 for x86_64 - BaseOS RPMs 8
         product: Red Hat Enterprise Linux for x86_64
-      - name: Red Hat Enterprise Linux 8 for x86_64 - AppStream RPMs
+      - name: Red Hat Enterprise Linux 8 for x86_64 - AppStream RPMs 8
         product: Red Hat Enterprise Linux for x86_64
       - name: Red Hat Enterprise Linux 9 for x86_64 - BaseOS RPMs 9.0
         product: Red Hat Enterprise Linux for x86_64
