--- a/config_as_code/satellite/leapp_8_to_9/lifecycle_environments.yml
+++ b/config_as_code/satellite/leapp_8_to_9/lifecycle_environments.yml
@@ -3,4 +3,11 @@ satellite_lifecycle_environments:
   # Red Hat Enterprise Linux 8
   - name: "RHEL8IPU_Dev"
     prior: "Library"
+  # Red Hat Enterprise Linux 9
+  - name: "RHEL9_Dev"
+    prior: "Library"
+  - name: "RHEL9_QA"
+    prior: "RHEL9_Dev"
+  - name: "RHEL9_Prod"
+    prior: "RHEL9_QA"
 ...
