--- a/setup_satellite.yml
+++ b/setup_satellite.yml
@@ -28,6 +28,12 @@
     bulk_load_size: 1000
 
 - hosts: "{{ HOSTS | default('satellite.example.com') }}"
+  connection: local
+  gather_facts: false
+  tasks:
+    - ansible.builtin.include_tasks: setup_satellite_infra_subtasks.yml
+
+- hosts: "{{ HOSTS | default('satellite.example.com') }}"
   become: true
   vars:
     refresh_satellite_manifest: false
@@ -35,21 +41,15 @@
   tasks:
     - block:
         - name: Create tempfile for Satellite production.log asynchronous tail
-          tempfile:
+          ansible.builtin.tempfile:
             state: file
           register: sat_prodlog_tempfile
 
         - name: Asynchronous tail Satellite production.log to tempfile 
-          shell: tail -n 0 -f /var/log/foreman/production.log > {{ sat_prodlog_tempfile.path }}
+          ansible.builtin.shell: tail -n 0 -f /var/log/foreman/production.log > {{ sat_prodlog_tempfile.path }}
           async: "{{ refresh_timeout }}"
           poll: 0
       when: refresh_satellite_manifest
-
-- hosts: "{{ HOSTS | default('satellite.example.com') }}"
-  connection: local
-  gather_facts: false
-  tasks:
-    - ansible.builtin.include_tasks: setup_satellite_infra_subtasks.yml
 
 - hosts: "{{ HOSTS | default('satellite.example.com') }}"
   connection: local
@@ -58,6 +58,10 @@
     refresh_satellite_manifest: false
     refresh_timeout: 14400
   tasks:
+    - name: Pause for 2 minutes to let system settle post infra subtasks
+      ansible.builtin.pause:
+        minutes: 2
+
     - name: refresh manifest
       redhat.satellite.subscription_manifest:
         organization: "Default Organization"
@@ -77,14 +81,14 @@
     - block:
       - name: >
           Watch the temp file until ManifestRefresh result ==> success appears before continuing...
-        wait_for:
+        ansible.builtin.wait_for:
           path: "{{ sat_prodlog_tempfile.path }}"
           search_regex: "^.*ManifestRefresh.*state\ changed.*\ stopped\ \ result.*\ success"
           timeout: 1500
           sleep: 20
 
       - name: Remove tempfile
-        file:
+        ansible.builtin.file:
           path: "{{ sat_prodlog_tempfile.path }}"
           state: absent
       when: refresh_satellite_manifest
