--- a/satellite_manifest_refresh.yml
+++ b/satellite_manifest_refresh.yml
@@ -1,48 +1,10 @@
 ---
-- hosts: "{{ HOSTS | default('satellite.example.com') }}"
-  become: true
-  vars:
-    refresh_timeout: 14400
-  tasks:
-    - name: Create tempfile for Satellite production.log asynchronous tail
-      tempfile:
-        state: file
-      register: sat_prodlog_tempfile
+- name: Import manifest refresh tempfile init playbook
+  ansible.builtin.import_playbook: satellite_manifest_refresh_tempfile_init.yml
 
-    - name: Asynchronous tail Satellite production.log to tempfile 
-      shell: tail -n 0 -f /var/log/foreman/production.log > {{ sat_prodlog_tempfile.path }}
-      async: "{{ refresh_timeout }}"
-      poll: 0
+- name: Import manifest refresh role execution playbook
+  ansible.builtin.import_playbook: satellite_manifest_refresh_execute_role.yml
 
-- hosts: "{{ HOSTS | default('satellite.example.com') }}"
-  connection: local
-  gather_facts: no
-  vars:
-    refresh_timeout: 14400
-  tasks:
-    - name: refresh manifest
-      redhat.satellite.subscription_manifest:
-        organization: "Default Organization"
-        state: refreshed
-      async: "{{ refresh_timeout }}"
-      poll: 0
-      register: refresh_async
-      delegate_to: localhost
-
-- hosts: "{{ HOSTS | default('satellite.example.com') }}"
-  become: true
-  vars:
-    refresh_timeout: 14400
-  tasks:
-    - name: >
-        Watch the temp file until ManifestRefresh result ==> success appears before continuing...
-      wait_for:
-        path: "{{ sat_prodlog_tempfile.path }}"
-        search_regex: "^.*ManifestRefresh.*state\ changed.*\ stopped\ \ result.*\ success"
-        timeout: 1500
-        sleep: 20
-
-    - name: Remove tempfile
-      file:
-        path: "{{ sat_prodlog_tempfile.path }}"
-        state: absent
+- name: Import manifest refresh watch tempfile playbook
+  ansible.builtin.import_playbook: satellite_manifest_refresh_watch_tempfile.yml
+...
