Switch to local connection var

--- a/satellite_manifest_refresh_become_task_level.yml
+++ b/satellite_manifest_refresh_become_task_level.yml
@@ -22,7 +22,8 @@
       async: "{{ refresh_timeout }}"
       poll: 0
       register: refresh_async
-      delegate_to: ansible-1.example.com
+      vars:
+        ansible_connection: local
 
     - name: >
         Watch the temp file until ManifestRefresh result ==> success appears before continuing...
