refresh_timeout var

--- a/satellite_manifest_refresh.yml
+++ b/satellite_manifest_refresh.yml
@@ -1,6 +1,8 @@
 ---
 - name: Satellite manifest refresh odyssey
   hosts: "{{ HOSTS | default('satellite.example.com') }}"
+  vars:
+    refresh_timeout: 14400
   tasks:
     - name: Satellite manifest refresh workloads Task Group
       ansible.builtin.include_tasks: satellite_manifest_subtasks_init.yml
