--- a/satellite_manifest_subtasks_retry.yml
+++ b/satellite_manifest_subtasks_retry.yml
@@ -2,6 +2,10 @@
 # https://devpress.csdn.net/cicd/62ec1d2689d9027116a10320.html
 - name: Satellite manifest refresh workloads Task Group
   block:
+    - name: Force Satellite production.log log rotation
+      ansible.builtin.shell: logrotate -v -f /etc/logrotate.d/foreman
+      become: true
+
     - name: Increment retry count
       ansible.builtin.set_fact:
         manifest_refresh_retry_count: "{{ manifest_refresh_retry_count | int + 1 }}"
@@ -9,18 +13,6 @@
     - name: Resume failed Satellite tasks after each failed attempt
       ansible.builtin.include_tasks: satellite_hammer_task_resume.yml
       when: manifest_refresh_retry_count | int != 1
-
-    - name: Create tempfile for Satellite production.log asynchronous tail
-      ansible.builtin.tempfile:
-        state: file
-      register: sat_prodlog_tempfile
-      become: true
-
-    - name: Asynchronous tail Satellite production.log to tempfile
-      ansible.builtin.shell: tail -n 0 -f /var/log/foreman/production.log > {{ sat_prodlog_tempfile.path }}
-      async: "{{ refresh_timeout }}"
-      poll: 0
-      become: true
 
     - name: refresh manifest
       redhat.satellite.subscription_manifest:
@@ -33,18 +25,12 @@
         ansible_connection: local
 
     - name: >
-        Watch the temp file until ManifestRefresh result ==> success appears before continuing...
+        Watch Satellite production.log until ManifestRefresh result ==> success appears before continuing...
       ansible.builtin.wait_for:
-        path: "{{ sat_prodlog_tempfile.path }}"
+        path: "/var/log/foreman/production.log"
         search_regex: "^.*ManifestRefresh.*state\ changed.*\ stopped\ \ result.*\ success"
-        timeout: 120
-        sleep: 20
-      become: true
-
-    - name: Remove tempfile
-      ansible.builtin.file:
-        path: "{{ sat_prodlog_tempfile.path }}"
-        state: absent
+        timeout: "{{ refresh_timeout }}"
+        sleep: 10
       become: true
 
   rescue:
