--- a/group_vars/control/job_templates.yml
+++ b/group_vars/control/job_templates.yml
@@ -642,3 +642,7 @@ controller_templates:
     notification_templates_started: Telemetry
     notification_templates_success: Telemetry
     notification_templates_error: Telemetry
+
+  - name: Demo Job Template
+    state: absent
+...
