--- a/group_vars/control/job_templates.yml
+++ b/group_vars/control/job_templates.yml
@@ -345,18 +345,18 @@ controller_templates:
     notification_templates_error: Telemetry
 
   - name: UTILITY / Snapshot Instance
-    description: Take node snapshot - selection via inventory group
+    description: Take node snapshot - selection via dynamic inventory group
     project: Automated Management
     playbook: snapshot_instance_lvm.yml
     inventory: EC2 Dynamic Inventory
     credentials:
       - Workshop Credential
     extra_vars:
-      lvm_snapshots_set_name: snap01
-      lvm_snapshots_snapshot_autoextend_threshold: 70
-      lvm_snapshots_snapshot_autoextend_percent: 20
-      lvm_snapshots_boot_backup: true
-      lvm_snapshots_volumes:
+      snapshot_set_name: snap01
+      snapshot_create_snapshot_autoextend_threshold: 70
+      snapshot_create_snapshot_autoextend_percent: 20
+      snapshot_create_boot_backup: true
+      snapshot_create_volumes:
         - vg: VolGroup00
           lv: rootVol
           size: 3G
@@ -390,6 +390,64 @@ controller_templates:
           required: true
     ask_variables_on_launch: true
     ask_limit_on_launch: true
+    notification_templates_started: Telemetry
+    notification_templates_success: Telemetry
+    notification_templates_error: Telemetry
+
+  - name: UTILITY / Snapshot Instance / static Workshop Inventory
+    description: Take node snapshot - selection via static Workshop Inventory 
+    project: Automated Management
+    playbook: snapshot_instance_lvm_inv_hosts.yml
+    inventory: Workshop Inventory
+    credentials:
+      - Workshop Credential
+    extra_vars:
+      snapshot_set_name: snap01
+      snapshot_create_snapshot_autoextend_threshold: 70
+      snapshot_create_snapshot_autoextend_percent: 20
+      snapshot_create_boot_backup: true
+      snapshot_create_volumes:
+        - vg: VolGroup00
+          lv: rootVol
+          size: 3G
+        - vg: VolGroup00
+          lv: varVol
+          size: 5G
+        - vg: VolGroup00
+          lv: logVol
+          size: 500M
+        - vg: VolGroup00
+          lv: auditVol
+          size: 100M
+    survey_enabled: true
+    survey:
+      name: ''
+      description: ''
+      spec:
+        - question_name: Snapshot action
+          type: multiplechoice
+          variable: lvm_snapshots_action
+          choices:
+            - check
+            - create
+            - revert
+            - remove
+          required: true
+    ask_variables_on_launch: true
+    ask_limit_on_launch: true
+    notification_templates_started: Telemetry
+    notification_templates_success: Telemetry
+    notification_templates_error: Telemetry
+
+  - name: CONVERT2RHEL / 01 - Upgrade OS to latest release
+    description: Upgrade OS to latest available packages
+    project: Automated Management
+    playbook: upgrade_instance.yml
+    inventory: EC2 Dynamic Inventory
+    credentials:
+      - Workshop Credential
+    extra_vars:
+      ec2_region: "{{ workshop_ec2_region }}"
     notification_templates_started: Telemetry
     notification_templates_success: Telemetry
     notification_templates_error: Telemetry
