Adjust hosts variable passed to playbook

--- a/c2r_analysis.yml
+++ b/c2r_analysis.yml
@@ -1,6 +1,6 @@
 ---
 - name: Convert2rhel pre-conversion analysis
-  hosts: "env_{{ centos_lifecycle_environment }}"
+  hosts: "{{ centos_lifecycle_environment | default(omit) }}"
   strategy: free
   gather_facts: true
   become: true
