--- a/c2r_analysis.yml
+++ b/c2r_analysis.yml
@@ -4,6 +4,8 @@
   strategy: free
   gather_facts: true
   become: true
+  environment:
+    CONVERT2RHEL_DISABLE_TELEMETRY: 1
   vars:
     rhsm_username: ""
     rhsm_password: ""
@@ -30,12 +32,12 @@
       mode: '0440'
       validate_certs: false
 
-  - name: "Add {{ ansible_distribution_major_version }}Server to file /etc/yum/vars/releasever if it does not exist on this CentOS {{ ansible_distribution_major_version }} system"
-    ansible.builtin.lineinfile:
-      path: /etc/yum/vars/releasever
-      line: "{{ ansible_distribution_major_version }}Server"
-      create: yes
-    when: (ansible_distribution == 'CentOS' and ansible_distribution_major_version == '6') or (ansible_distribution == 'CentOS' and ansible_distribution_major_version == '7')
+  # - name: "Add {{ ansible_distribution_major_version }}Server to file /etc/yum/vars/releasever if it does not exist on this CentOS {{ ansible_distribution_major_version }} system"
+  #   ansible.builtin.lineinfile:
+  #     path: /etc/yum/vars/releasever
+  #     line: "{{ ansible_distribution_major_version }}Server"
+  #     create: yes
+  #   when: (ansible_distribution == 'CentOS' and ansible_distribution_major_version == '6') or (ansible_distribution == 'CentOS' and ansible_distribution_major_version == '7')
 
   - name: Generate pre-conversion analysis report
     ansible.builtin.import_role:
