--- a/c2r_analysis.yml
+++ b/c2r_analysis.yml
@@ -6,6 +6,7 @@
   become: true
   environment:
     CONVERT2RHEL_DISABLE_TELEMETRY: 1
+    CONVERT2RHEL_UNSUPPORTED_INCOMPLETE_ROLLBACK: 1
   vars:
     rhsm_username: ""
     rhsm_password: ""
