--- a/snapshot_revert_ec2.yml
+++ b/snapshot_revert_ec2.yml
@@ -2,10 +2,11 @@
 - name: Revert instance via snapshot
   hosts: ansible-1.example.com
   connection: local
-  gather_facts: no
+  gather_facts: false
   tasks:
-  - name: Revert instance via snapshot in region "{{ ec2_region }}"
-    include_role:
-      name: ec2_node_tools
-    vars:
-      ec2_instance_action: "snapshot_revert"
+    - name: Revert instance via snapshot in region "{{ ec2_region }}"
+      ansible.builtin.include_role:
+        name: ec2_node_tools
+      vars:
+        ec2_instance_action: "snapshot_revert"
+...
