--- a/leapp_remediate.yml
+++ b/leapp_remediate.yml
@@ -7,7 +7,7 @@
   force_handlers: true
   tasks:
     - name: Include randomized delay before beginning remediation
-      command: |
+      ansible.builtin.command: |
         python3 -c 'import time;import random;zzzzz=random.uniform(15.0,30.0);time.sleep(zzzzz);print(zzzzz)'
       delegate_to: localhost
       connection: local
