--- a/leapp_upgrade.yml
+++ b/leapp_upgrade.yml
@@ -8,7 +8,7 @@
   #   ansible_python_interpreter: /usr/libexec/platform-python
   tasks:
     - name: Include randomized delay before beginning upgrade
-      command: |
+      ansible.builtin.command: |
         python3 -c 'import time;import random;zzzzz=random.uniform(15.0,30.0);time.sleep(zzzzz);print(zzzzz)'
       delegate_to: localhost
       connection: local
