--- a/group_vars/control/job_templates.yml
+++ b/group_vars/control/job_templates.yml
@@ -9,6 +9,10 @@ controller_templates:
     limit: rhel7
     extra_vars:
       org_id: "Default_Organization"
+      rhsm_enabled_repos:
+        - rhel-7-server-rpms
+        - rhel-7-server-extras-rpms
+        - rhel-7-server-satellite-client-6-rpms
     notification_templates_started: Telemetry
     notification_templates_success: Telemetry
     notification_templates_error: Telemetry
