--- a/c2r_analysis.yml
+++ b/c2r_analysis.yml
@@ -6,7 +6,7 @@
   become: true
   environment:
     CONVERT2RHEL_DISABLE_TELEMETRY: 1
-    CONVERT2RHEL_UNSUPPORTED_INCOMPLETE_ROLLBACK: 1
+    # CONVERT2RHEL_UNSUPPORTED_INCOMPLETE_ROLLBACK: 1
   vars:
     rhsm_username: ""
     rhsm_password: ""
@@ -33,14 +33,27 @@
         mode: '0440'
         validate_certs: false
 
-    # - name: "Add {{ ansible_distribution_major_version }}Server to file /etc/yum/vars/releasever if it does not exist on this CentOS {{ ansible_distribution_major_version }} system"
-    #   ansible.builtin.lineinfile:
-    #     path: /etc/yum/vars/releasever
-    #     line: "{{ ansible_distribution_major_version }}Server"
-    #     create: yes
-    #   when: (ansible_distribution == 'CentOS' and ansible_distribution_major_version == '6') or (ansible_distribution == 'CentOS' and ansible_distribution_major_version == '7')
+    # - name: Download centos-release package locally
+    #   ansible.builtin.command: >-
+    #     yumdownloader -v --destdir=/root centos-release-7-9.2009.1.el7.centos.x86_64
+
+    - name: Download centos-release package locally
+      ansible.builtin.yum:
+        name: centos-release
+        state: latest
+        download_only: true
+        download_dir: /root
+
+    - name: Remove centos-release package
+      ansible.builtin.command: >-
+        rpm -e --nodeps --justdb centos-release
 
     - name: Generate pre-conversion analysis report
       ansible.builtin.import_role:
         name: infra.convert2rhel.analysis
+
+    - name: Reinstall centos-release package
+      ansible.builtin.yum:
+        name: /root/centos-release*.rpm
+        state: present
 ...
