--- a/satellite_manifest_refresh.yml
+++ b/satellite_manifest_refresh.yml
@@ -1,26 +1,28 @@
 ---
-- hosts: "{{ HOSTS | default('satellite.example.com') }}"
+- name: Create tempfile and then asynchronous tail
+  hosts: "{{ HOSTS | default('satellite.example.com') }}"
   become: true
   vars:
     refresh_timeout: 14400
   tasks:
     - name: Create tempfile for Satellite production.log asynchronous tail
-      tempfile:
+      ansible.builtin.tempfile:
         state: file
       register: sat_prodlog_tempfile
 
     - name: Asynchronous tail Satellite production.log to tempfile 
-      shell: tail -n 0 -f /var/log/foreman/production.log > {{ sat_prodlog_tempfile.path }}
+      ansible.builtin.shell: tail -n 0 -f /var/log/foreman/production.log > {{ sat_prodlog_tempfile.path }}
       async: "{{ refresh_timeout }}"
       poll: 0
 
-- hosts: "{{ HOSTS | default('satellite.example.com') }}"
+- name: Refresh manifest
+  hosts: "{{ HOSTS | default('satellite.example.com') }}"
   connection: local
   gather_facts: no
   vars:
     refresh_timeout: 14400
   tasks:
-    - name: refresh manifest
+    - name: Refresh manifest
       redhat.satellite.subscription_manifest:
         organization: "Default Organization"
         state: refreshed
@@ -29,20 +31,22 @@
       register: refresh_async
       delegate_to: localhost
 
-- hosts: "{{ HOSTS | default('satellite.example.com') }}"
+- name: Watch tempfile and then remove once successful
+  hosts: "{{ HOSTS | default('satellite.example.com') }}"
   become: true
   vars:
     refresh_timeout: 14400
   tasks:
     - name: >
-        Watch the temp file until ManifestRefresh result ==> success appears before continuing...
-      wait_for:
+        Watch temp file until ManifestRefresh result ==> success appears before continuing...
+      ansible.builtin.wait_for:
         path: "{{ sat_prodlog_tempfile.path }}"
         search_regex: "^.*ManifestRefresh.*state\ changed.*\ stopped\ \ result.*\ success"
         timeout: 1500
         sleep: 20
 
     - name: Remove tempfile
-      file:
+      ansible.builtin.file:
         path: "{{ sat_prodlog_tempfile.path }}"
         state: absent
+...
